--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,12 @@
+# editorconfig.org
+
 root = true
 
 [*]
-indent_style = tabs
-indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
 end_of_line = lf
-# editorconfig-tools is unable to ignore longs strings or urls
-max_line_length = null
+indent_style = tab
+tab_width = 2
+indent_size = 2
+insert_final_newline = true
